# leadersboard-sample

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml
.github/workflows/: bench-report.yml  ruff.yml
agents/: agent_baseline.py  agent_v1.py  file_search_tools.py
agents/agent_baseline/: agent.py
agents/agent_v1/: agent.py
agents/baseline/: agent.py
agents/gemini_2_5_flash/: agent.py
agents/with_code_executor/: agent.py
agents/with_google_search/: agent.py
benchmarks/: task1.json  task2.json  task3.json  task4.json  task5.json
results/: baseline.json  benchmark_cache.json  benchmark_results.json  gemini_2_5_flash.json  with_code_executor.json  with_google_search.json
src/: __init__.py  cache_manager.py  evaluator.py  reporter.py  runner.py
src/services/: cache_manager.py  evaluator.py
test_files/scenario1/: README.md  setup.py
test_files/scenario1/config/: config.yaml
test_files/scenario1/src/: main.py
